# guardrails

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  fetch_datasets.py
benchmarks/pii_detection/: evaluate.py
benchmarks/prompt_injection/: evaluate.py  optimize.py
docs/: ai-policy-generator.md  api-reference.md  cli.md  concepts.md  event-format.md  expressions.md  index.md  integration.md  matchers.md  policy-syntax.md
examples/: END_TO_END_TEST.md  audit_example.py  custom_matcher_example.py  decorator_example.py  dry_run_example.py  optimize_policy.py  quickstart.py  verify_example.py
examples/policies/: basic.yaml  enterprise.yaml
src/theaios/guardrails/: __init__.py  audit.py  cli.py  config.py  engine.py  expressions.py  profiles.py  rate_limit.py  types.py  verify.py
src/theaios/guardrails/adapters/: __init__.py  decorator.py  langchain.py  openai_agents.py
src/theaios/guardrails/matchers/: __init__.py  custom.py  keyword.py  pii.py  regex.py
src/theaios/guardrails/reporting/: __init__.py  console.py  json_export.py
tests/: conftest.py  test_audit.py  test_config.py  test_engine.py  test_expressions.py  test_profiles.py  test_rate_limit.py  test_types.py
tests/adapters/: test_decorator.py
tests/integration/: test_e2e.py
tests/matchers/: test_keyword.py  test_pii.py  test_regex.py  test_registry.py
